tdf#115511: Make the description field keyboard-accessible

in the Customize dialog. By setting an accelerator key, and
also manually setting the WB_TABSTOP bit to include it in the
tab navigation.

Change-Id: I02ce9e2e78404401c9fc124df07f4f0c0b1e110e